--- a/styles/sass/partials/_headerMediaQueries.scss
+++ b/styles/sass/partials/_headerMediaQueries.scss
@@ -21,9 +21,9 @@
                 
             }
         }
-        .slideOutNav {
+        // .slideOutNav {
             
-        }
+        // }
     
     }
 }
