--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -4,12 +4,13 @@
         padding: 150px 0;
     }
     .carousel{
+        position: relative;
         width: 100%;
         
         overflow: hidden;
         .container {
-            width: 75%;
-            margin: auto;
+            width: 100%;
+            margin: auto;            
             ul {
                 transition: transform 0.35s ease-in-out;
     
@@ -30,6 +31,14 @@
                     h3,
                     p {
                         text-align: center;
+                        .gesture {
+                            a {
+                                font-size: 1.8rem;
+                                color: #fff;
+                                text-transform: lowercase;
+                                text-decoration: underline;
+                            }
+                        }
                     }
                     a {
                         color: $navText;
@@ -46,6 +55,7 @@
                             width: 100%;
                             height: 500px;
                             object-fit: cover;
+                            
                         }
                         
                     }
@@ -58,13 +68,26 @@
         .buttonContainer {
             display: flex;
             justify-content: space-between;
-            width: 30%;
-            
+            width: 100%;
+            position: absolute;
+            top: 25%;    
             margin: auto;
             gap: 1rem;
+            .prevButton,
+            .nextButton {
+                opacity: .2;
+                border: none;
+                color: black;
+                border-radius: 5px;
+                &:hover,
+                &:focus {
+                    opacity: 1;
+                }
+            }
             i{
                 font-size: 5rem;
-                background-color: transparent;
+                opacity: 1;
+                
             }
         }
         }
